tweaks on Paging